hot fix when scale on mobile

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -69,6 +69,7 @@ body{
 }
 .active{
     visibility: visible;
+    position: fixed;
 }
 
 /** MAIN PAGE **/
